# Algo-UNN-Mag_1

./: CMakeLists.txt  CMakePresets.json  README.md
contest_1/: problem_1A.cpp  problem_1B.cpp  problem_1C.cpp  problem_D.cpp
contest_2/: problem_2A.cpp  problem_2B.cpp  problem_2C.cpp  problem_2D.cpp  problem_2E.cpp
contest_3/: problem_3D.cpp  problem_3E.cpp
contest_4/: problem_4A.cpp  problem_4C.cpp
contest_5/: problem_5C.cpp
contest_6/: problem_6B.cpp  problem_6F.cpp  tmp.cpp
